# thd-ss25-ml-project

./: .gitignore  README.md  pyproject.toml
data/: filtered.csv  flagged.csv
notebooks/: 05jun-explore.ipynb  10jun-explore.ipynb  Algs&Turning.ipynb  KNN.ipynb  decision_tree.ipynb  features.ipynb  main.ipynb  models.ipynb  random-forest.ipynb  rf.ipynb
notebooks/exploration/: features.ipynb  knn_exploration.ipynb
src/algorithms/: 30Jun-utilization.ipynb  Algs&Turning.ipynb  KNN.ipynb
src/ml_project/: data.py  helpers.py
