[project]
name = "thd-ss25-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ruff>=0.11.13"]

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.ruff]
select = ["I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_project"]
